Add graceful degradation for parseq-lambda-names on Java 15+
- Disable Unsafe.defineAnonymousClass instrumentation on Java 15+ (removed in JEP 371)
- Add Java version detection to ASMBasedTaskDescriptor
- Lambda descriptions fall back to simple class names on Java 15+
- Update all test files to handle both instrumented and non-instrumented cases
- All tests pass on Java 21

Co-Authored-By: johnny.vaquiz@gmail.com <johnny.vaquiz@gmail.com>